--- a/index.html
+++ b/index.html
@@ -15,6 +15,33 @@
 <body>
     <header class="header-top">
         <div class="container header-container">
+            <div class="burger-menu">
+                <div class="burger-menu__icon">
+                    <span></span>
+                </div>
+                <div class="burger-menu__window burger-menu__window-disabled">
+                    <div class="container">
+                        <div class="burger-menu__closeIcon">
+                            <span></span>
+                        </div>
+                        <ul class="burger-menu__list">
+                            <li class="burger-menu__item"><a href="" class="navigation__link">Галерея</a></li>
+                            <li class="burger-menu__item"><a href="" class="navigation__link">Каталог</a></li>
+                            <li class="burger-menu__item"><a href="" class="navigation__link">О нас</a></li>
+                            <li class="burger-menu__item"><a href="" class="navigation__link">События</a></li>
+                            <li class="burger-menu__item"><a href="" class="navigation__link">Издания</a></li>
+                            <li class="burger-menu__item"><a href="" class="navigation__link">Проекты</a></li>
+                            <li class="burger-menu__item"><a href="" class="navigation__link">Контакты</a></li>
+                        </ul>
+                        <a href="" class="burger-menu__auth"><div class=""><span class="auth__icon"><svg width="13" height="13"
+                            viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M5.12056 9.09278L6.13889 10.1111L9.75 6.5L6.13889 2.88889L5.12056 3.90722L6.98389 5.77778H0V7.22222H6.98389L5.12056 9.09278ZM11.5556 0H1.44444C0.642778 0 0 0.65 0 1.44444V4.33333H1.44444V1.44444H11.5556V11.5556H1.44444V8.66667H0V11.5556C0 12.35 0.642778 13 1.44444 13H11.5556C12.35 13 13 12.35 13 11.5556V1.44444C13 0.65 12.35 0 11.5556 0Z"
+                                fill="white" />
+                        </svg></span><span class="auth__link">Войти</span></div></a href="">
+                    </div>
+                </div>
+            </div>
             <div class="logo"><a href=""><img src="content_img/logo.svg" alt=""></a></div>
             <nav class="navigation">
                 <ul class="navigation__list">
@@ -33,6 +60,10 @@
                                 d="M5.12056 9.09278L6.13889 10.1111L9.75 6.5L6.13889 2.88889L5.12056 3.90722L6.98389 5.77778H0V7.22222H6.98389L5.12056 9.09278ZM11.5556 0H1.44444C0.642778 0 0 0.65 0 1.44444V4.33333H1.44444V1.44444H11.5556V11.5556H1.44444V8.66667H0V11.5556C0 12.35 0.642778 13 1.44444 13H11.5556C12.35 13 13 12.35 13 11.5556V1.44444C13 0.65 12.35 0 11.5556 0Z"
                                 fill="white" />
                         </svg></span>Войти</a></div>
+            <div class="search">
+                <button class="search__button"><span class="search__button-img"></span></button>
+                <input type="text" class="search__input search__input-disabled" placeholder="Поиск по сайту">
+            </div>
         </div>
     </header>
     <header class="header-bot">
@@ -138,7 +169,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-we">
+        <!-- <section class="section-we">
             <div class="container">
                 <h2 class="section-heading">О нас</h2>
                 <p class="section-text">Ясность нашей позиции очевидна: семантический разбор внешних противодействий
@@ -419,6 +450,7 @@
                 <li class="social-network__item"><a href=""><span class="facebook"></span></a></li>
             </ul>
         </div>
-    </footer>
+    </footer> -->
 </body>
+
 </html>
