--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
                             <li class="burger-menu__item"><a href="" class="navigation__link">Проекты</a></li>
                             <li class="burger-menu__item"><a href="" class="navigation__link">Контакты</a></li>
                         </ul>
-                        <a href="" class="burger-menu__auth"><div class=""><span class="auth__icon"><svg width="13" height="13"
-                            viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M5.12056 9.09278L6.13889 10.1111L9.75 6.5L6.13889 2.88889L5.12056 3.90722L6.98389 5.77778H0V7.22222H6.98389L5.12056 9.09278ZM11.5556 0H1.44444C0.642778 0 0 0.65 0 1.44444V4.33333H1.44444V1.44444H11.5556V11.5556H1.44444V8.66667H0V11.5556C0 12.35 0.642778 13 1.44444 13H11.5556C12.35 13 13 12.35 13 11.5556V1.44444C13 0.65 12.35 0 11.5556 0Z"
-                                fill="white" />
-                        </svg></span><span class="auth__link">Войти</span></div></a href="">
+                        <a href="" class="burger-menu__auth">
+                            <div class=""><span class="auth__icon"><svg width="13" height="13" viewBox="0 0 13 13"
+                                        fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M5.12056 9.09278L6.13889 10.1111L9.75 6.5L6.13889 2.88889L5.12056 3.90722L6.98389 5.77778H0V7.22222H6.98389L5.12056 9.09278ZM11.5556 0H1.44444C0.642778 0 0 0.65 0 1.44444V4.33333H1.44444V1.44444H11.5556V11.5556H1.44444V8.66667H0V11.5556C0 12.35 0.642778 13 1.44444 13H11.5556C12.35 13 13 12.35 13 11.5556V1.44444C13 0.65 12.35 0 11.5556 0Z"
+                                            fill="white" />
+                                    </svg></span><span class="auth__link">Войти</span></div>
+                        </a href="">
                     </div>
                 </div>
             </div>
@@ -63,6 +65,15 @@
             <div class="search">
                 <button class="search__button"><span class="search__button-img"></span></button>
                 <input type="text" class="search__input search__input-disabled" placeholder="Поиск по сайту">
+            </div>
+            <div class="search__window search__window-disabled">
+                <div class="container">
+                    <div class="burger-menu__closeIcon"><span></span></div>
+                    <div class="search">
+                        <button class="search__button"><span class="search__button-img"></span></button>
+                        <input type="text" class="search__input" placeholder="Поиск по сайту">
+                    </div>
+                </div>
             </div>
         </div>
     </header>
