addition to the previous

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="section-we">
+        <section class="section-we">
             <div class="container">
                 <h2 class="section-heading">О нас</h2>
                 <p class="section-text">Ясность нашей позиции очевидна: семантический разбор внешних противодействий
@@ -200,7 +200,7 @@
                     набирают популярность среди определенных слоев населения, а значит, должны быть разоблачены.</p>
             </div>
         </section>
-        <section class="section-gallery">
+        <!-- <section class="section-gallery">
             <div class="container">
                 <div class="filter-menu">
                     <h2 class="section-heading">Издания</h2>
