change Search and some margin

--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
                         </li>
                     </ul>
                 </nav>
-                <div class="search">
+                <form class="search" tabindex="0">
                     <button class="search__button"><span class="search__button-img"></span></button>
                     <input type="text" name="" id="" class="search__input" placeholder="Поиск по сайту">
-                </div>
+                </form>
             </div>
         </div>
     </header>
