--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <link rel="stylesheet" href="https://unpkg.com/simplebar@latest/dist/simplebar.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="js/index.js" defer></script>
 </head>
 
@@ -317,7 +320,8 @@
                         <div class="swiper-button-prev gallery__button-prev"></div>
                         <div class="swiper-button-next gallery__button-next"></div>
                     </div>
-                    <p class="menu__note menu__note-adaptive">Вам предоставляется 10 бесплатных скачиваний. Для увеличения количества
+                    <p class="menu__note menu__note-adaptive">Вам предоставляется 10 бесплатных скачиваний. Для
+                        увеличения количества
                         скачиваний
                         <a href="" class="text-link">авторизуйтесь</a>, либо воспользуйтесь лицензией.
                     </p>
@@ -341,16 +345,17 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="section-catalog">
+        <section class="section-catalog">
             <div class="container">
                 <div class="section-catalog__container">
                     <h2 class="section-heading">Каталог</h2>
                     <ul class="language-pack__list">
-                        <li class="language-pack__item"><span class="FRA"></span></li>
-                        <li class="language-pack__item"><span class="DEU"></span></li>
-                        <li class="language-pack__item"><span class="ITA"></span></li>
-                        <li class="language-pack__item"><span class="RUS"></span></li>
-                        <li class="language-pack__item"><span class="BEL"></span></li>
+                        <li class="language-pack__item"><span class="language-country" id="FRA"></span></li>
+                        <li class="language-pack__item"><span class="language-country" id="DEU"></span></li>
+                        <li class="language-pack__item"><span class="language-country" id="ITA"></span></li>
+                        <li class="language-pack__item language-pack__item-active"><span class="language-country"
+                                id="RUS"></span></li>
+                        <li class="language-pack__item"><span class="language-country" id="BEL"></span></li>
                     </ul>
                 </div>
                 <p class="section-text">Акционеры крупнейших компаний, которые представляют собой яркий пример
@@ -360,6 +365,7 @@
                     функционально разнесены на независимые элементы.</p>
                 <div class="catalog-content">
                     <div class="catalog-content__description">
+                        <img class="catalog-content__img" src="content_img/catalog/domenico.jpg" alt="">
                         <h3 class="content-heading">Доменико Гирландайло</h3>
                         <h4 class="content-subtitle">2 июня 1448 — 11 января 1494.</h4>
                         <p class="section-text">Один из ведущих флорентийских художников Кватроченто, основатель
@@ -369,68 +375,70 @@
                             которых выпукло, со всевозможными подробностями показана домашняя жизнь библейских
                             персонажей (в их роли выступают знатные граждане Флоренции в костюмах того времени).</p>
                     </div>
-                    <ul class="catalog-content__subjectList">
-                        <li class="catalog-content__subjectItem">C 1400 по 1499 гг.<span
-                                class="catalog-content__arrow"></span></li>
-                        <ul class="catalog-content__list">
-                            <li class="catalog-content__item">Бенедетто ди Биндо</li>
-                            <li class="catalog-content__item">Бергоньоне, Амброджо</li>
-                            <li class="catalog-content__item">Биссоло, Франческо</li>
-                            <li class="catalog-content__item">Больтраффио, Джованни</li>
-                            <li class="catalog-content__item">Бонсиньори, Франческо</li>
-                            <li class="catalog-content__item">Боттичини, Рафаэлло</li>
-                            <li class="catalog-content__item">Брамантино</li>
-                            <li class="catalog-content__item">Бреа, Людовико</li>
-                            <li class="catalog-content__item">Бьяджо д’Антонио Туччи</li>
-                            <li class="catalog-content__item">Веккьетта</li>
-                            <li class="catalog-content__item">Андреа Верроккьо</li>
-                            <li class="catalog-content__item">Доменико Гирландайо</li>
-                            <li class="catalog-content__item">Беноццо Гоццоли</li>
-                            <li class="catalog-content__item">Граначчи, Франческо</li>
-                            <li class="catalog-content__item">Грегорио ди Чекко</li>
-                            <li class="catalog-content__item">Джованни да Удине</li>
-                            <li class="catalog-content__item">Джованни ди Паоло</li>
-                            <li class="catalog-content__item">Джорджоне</li>
-                            <li class="catalog-content__item">Парентино, Бернардо</li>
-                            <li class="catalog-content__item">Пезеллино</li>
-                            <li class="catalog-content__item">Пьетро Перуджино</li>
-                            <li class="catalog-content__item">Перуцци, Бальдассаре</li>
-                            <li class="catalog-content__item">Пизанелло</li>
-                            <li class="catalog-content__item">Пинтуриккьо</li>
-                        </ul>
-                        <li class="catalog-content__subjectItem">C 1400 по 1499 гг.<span
-                                class="catalog-content__arrow"></span></li>
-                        <ul class="catalog-content__list">
-                            <li class="catalog-content__item">Бенедетто ди Биндо</li>
-                            <li class="catalog-content__item">Бергоньоне, Амброджо</li>
-                            <li class="catalog-content__item">Биссоло, Франческо</li>
-                            <li class="catalog-content__item">Больтраффио, Джованни</li>
-                            <li class="catalog-content__item">Бонсиньори, Франческо</li>
-                            <li class="catalog-content__item">Боттичини, Рафаэлло</li>
-                            <li class="catalog-content__item">Брамантино</li>
-                            <li class="catalog-content__item">Бреа, Людовико</li>
-                            <li class="catalog-content__item">Бьяджо д’Антонио Туччи</li>
-                            <li class="catalog-content__item">Веккьетта</li>
-                            <li class="catalog-content__item">Андреа Верроккьо</li>
-                            <li class="catalog-content__item">Доменико Гирландайо</li>
-                            <li class="catalog-content__item">Беноццо Гоццоли</li>
-                            <li class="catalog-content__item">Граначчи, Франческо</li>
-                            <li class="catalog-content__item">Грегорио ди Чекко</li>
-                            <li class="catalog-content__item">Джованни да Удине</li>
-                            <li class="catalog-content__item">Джованни ди Паоло</li>
-                            <li class="catalog-content__item">Джорджоне</li>
-                            <li class="catalog-content__item">Парентино, Бернардо</li>
-                            <li class="catalog-content__item">Пезеллино</li>
-                            <li class="catalog-content__item">Пьетро Перуджино</li>
-                            <li class="catalog-content__item">Перуцци, Бальдассаре</li>
-                            <li class="catalog-content__item">Пизанелло</li>
-                            <li class="catalog-content__item">Пинтуриккьо</li>
-                        </ul>
+                    <ul class="catalog-content__subjectList" id="accordion">
+                        <li class="catalog-content__subjectItem">
+                            <div>C 1400 по 1499 гг.</div>
+                            <ul class="catalog-content__list">
+                                <li class="catalog-content__item">Бенедетто ди Биндо</li>
+                                <li class="catalog-content__item">Бергоньоне, Амброджо</li>
+                                <li class="catalog-content__item">Биссоло, Франческо</li>
+                                <li class="catalog-content__item">Больтраффио, Джованни</li>
+                                <li class="catalog-content__item">Бонсиньори, Франческо</li>
+                                <li class="catalog-content__item">Боттичини, Рафаэлло</li>
+                                <li class="catalog-content__item">Брамантино</li>
+                                <li class="catalog-content__item">Бреа, Людовико</li>
+                                <li class="catalog-content__item">Бьяджо д’Антонио Туччи</li>
+                                <li class="catalog-content__item">Веккьетта</li>
+                                <li class="catalog-content__item">Андреа Верроккьо</li>
+                                <li class="catalog-content__item">Доменико Гирландайо</li>
+                                <li class="catalog-content__item">Беноццо Гоццоли</li>
+                                <li class="catalog-content__item">Граначчи, Франческо</li>
+                                <li class="catalog-content__item">Грегорио ди Чекко</li>
+                                <li class="catalog-content__item">Джованни да Удине</li>
+                                <li class="catalog-content__item">Джованни ди Паоло</li>
+                                <li class="catalog-content__item">Джорджоне</li>
+                                <li class="catalog-content__item">Парентино, Бернардо</li>
+                                <li class="catalog-content__item">Пезеллино</li>
+                                <li class="catalog-content__item">Пьетро Перуджино</li>
+                                <li class="catalog-content__item">Перуцци, Бальдассаре</li>
+                                <li class="catalog-content__item">Пизанелло</li>
+                                <li class="catalog-content__item">Пинтуриккьо</li>
+                            </ul>
+                        </li>
+                        <li class="catalog-content__subjectItem">
+                            <div>C 1400 по 1499 гг.</div>
+                            <ul class="catalog-content__list">
+                                <li class="catalog-content__item">Бенедетто ди Биндо</li>
+                                <li class="catalog-content__item">Бергоньоне, Амброджо</li>
+                                <li class="catalog-content__item">Биссоло, Франческо</li>
+                                <li class="catalog-content__item">Больтраффио, Джованни</li>
+                                <li class="catalog-content__item">Бонсиньори, Франческо</li>
+                                <li class="catalog-content__item">Боттичини, Рафаэлло</li>
+                                <li class="catalog-content__item">Брамантино</li>
+                                <li class="catalog-content__item">Бреа, Людовико</li>
+                                <li class="catalog-content__item">Бьяджо д’Антонио Туччи</li>
+                                <li class="catalog-content__item">Веккьетта</li>
+                                <li class="catalog-content__item">Андреа Верроккьо</li>
+                                <li class="catalog-content__item">Доменико Гирландайо</li>
+                                <li class="catalog-content__item">Беноццо Гоццоли</li>
+                                <li class="catalog-content__item">Граначчи, Франческо</li>
+                                <li class="catalog-content__item">Грегорио ди Чекко</li>
+                                <li class="catalog-content__item">Джованни да Удине</li>
+                                <li class="catalog-content__item">Джованни ди Паоло</li>
+                                <li class="catalog-content__item">Джорджоне</li>
+                                <li class="catalog-content__item">Парентино, Бернардо</li>
+                                <li class="catalog-content__item">Пезеллино</li>
+                                <li class="catalog-content__item">Пьетро Перуджино</li>
+                                <li class="catalog-content__item">Перуцци, Бальдассаре</li>
+                                <li class="catalog-content__item">Пизанелло</li>
+                                <li class="catalog-content__item">Пинтуриккьо</li>
+                            </ul>
                     </ul>
+                    </li>
                 </div>
             </div>
         </section>
-        <section class="section-event">
+        <!--  <section class="section-event">
             <div class="container">
                 <ul class="section-event__list">
                     <li class="event-card">
