--- a/index.html
+++ b/index.html
@@ -596,43 +596,100 @@
                 </div>
             </div>
         </section>
-        <!--  <section class="section-event">
+        <section class="section-event">
             <div class="container">
+                <h2 class="section-heading">События</h2>
                 <ul class="section-event__list">
-                    <li class="event-card">
+                    <li class="event-card Museum_Shchuseva">
                         <h4 class="content-subtitle">Музей им. Щусева</h4>
                         <h4 class="content-subtitle">с 20 марта по 30 апреля</h4>
                         <h3 class="content-heading">Книжная гравюра в живом восприятии</h3>
                         <p class="section-text">Один из ведущих флорентийских художников Кватроченто, основатель
-                            художественной династии, которую продолжили его брат Давид и сын Ридольфо. Глава
-                            художественной мастерской, где юный Микеланджело.</p>
+                            художественной династии, которую продолжили его брат Давид и сын Ридольфо.</p>
                         <a href="" class="event-card__link">Подробнее</a>
                     </li>
-                    <li class="event-card">
+                    <li class="event-card MMOMA">
                         <h4 class="content-subtitle">ММОМА</h4>
                         <h4 class="content-subtitle">24 марта 19:00</h4>
                         <h3 class="content-heading">«Открытая дискуссия». Дмитрий Петров и Сергей Ильин.</h3>
                         <p class="section-text">Высокий уровень вовлечения представителей целевой аудитории является
-                            четким доказательством простого факта: постоянный количественный рост и сфера нашей
-                            активности представляет собой интересный эксперимент проверки новых принципов
-                            формирования...</p>
+                            четким доказательством простого факта.</p>
                         <a href="" class="event-card__link">Подробнее</a>
                     </li>
-                    <li class="event-card">
+                    <li class="event-card Jewish_Museum">
                         <h4 class="content-subtitle">Еврейский музей</h4>
                         <h4 class="content-subtitle">с 31 марта по 21 апреля</h4>
                         <h3 class="content-heading">Выставка «Формация 2020»</h3>
                         <p class="section-text">Идейные соображения высшего порядка, а также современная методология
-                            разработки играет важную роль в формировании глубокомысленных рассуждений. Также как
-                            перспективное планирование играет определяющее значение для новых принципов формирования
-                            материально-технической и кадровой базы.</p>
+                            разработки играет важную роль в формировании глубокомысленных рассуждений.</p>
+                        <a href="" class="event-card__link">Подробнее</a>
+                    </li>
+                    <li class="event-card Tretyakov_Gallery">
+                        <h4 class="content-subtitle">Третьяковка на Крымском валу</h4>
+                        <h4 class="content-subtitle">с 30 марта по 30 апреля</h4>
+                        <h3 class="content-heading">XXIV Международная биеннале молодого искусства</h3>
+                        <p class="section-text">Внезапно, реплицированные с зарубежных источников, современные
+                            исследования.</p>
+                        <a href="" class="event-card__link">Подробнее</a>
+                    </li>
+                    <li class="event-card MMAM">
+                        <h4 class="content-subtitle">ММАМ</h4>
+                        <h4 class="content-subtitle">с 8 апреля по 20 мая</h4>
+                        <h3 class="content-heading">Джон Винзор. Фотографии из серии «Метафора серебра»</h3>
+                        <p class="section-text">Один из ведущих флорентийских художников Кватроченто, основатель
+                            художественной династии, которую продолжили его брат Давид и сын Ридольфо.</p>
                         <a href="" class="event-card__link">Подробнее</a>
                     </li>
                 </ul>
+                <div class="swiper-container section-event__swiper">
+                    <div class="swiper-wrapper section-event__wrapper">
+                        <div class="swiper-slide event-card Museum_Shchuseva">
+                            <h4 class="content-subtitle">Музей им. Щусева</h4>
+                            <h4 class="content-subtitle">с 20 марта по 30 апреля</h4>
+                            <h3 class="content-heading">Книжная гравюра в живом восприятии</h3>
+                            <p class="section-text">Один из ведущих флорентийских художников Кватроченто, основатель
+                                художественной династии, которую продолжили его брат Давид и сын Ридольфо.</p>
+                            <a href="" class="event-card__link">Подробнее</a>
+                        </div>
+                        <div class="swiper-slide event-card MMOMA">
+                            <h4 class="content-subtitle">ММОМА</h4>
+                            <h4 class="content-subtitle">24 марта 19:00</h4>
+                            <h3 class="content-heading">«Открытая дискуссия». Дмитрий Петров и Сергей Ильин.</h3>
+                            <p class="section-text">Высокий уровень вовлечения представителей целевой аудитории является
+                                четким доказательством простого факта.</p>
+                            <a href="" class="event-card__link">Подробнее</a>
+                        </div>
+                        <div class="swiper-slide event-card Jewish_Museum">
+                            <h4 class="content-subtitle">Еврейский музей</h4>
+                            <h4 class="content-subtitle">с 31 марта по 21 апреля</h4>
+                            <h3 class="content-heading">Выставка «Формация 2020»</h3>
+                            <p class="section-text">Идейные соображения высшего порядка, а также современная методология
+                                разработки играет важную роль в формировании глубокомысленных рассуждений.</p>
+                            <a href="" class="event-card__link">Подробнее</a>
+                        </div>
+                        <div class="swiper-slide event-card Tretyakov_Gallery">
+                            <h4 class="content-subtitle">Третьяковка на Крымском валу</h4>
+                            <h4 class="content-subtitle">с 30 марта по 30 апреля</h4>
+                            <h3 class="content-heading">XXIV Международная биеннале молодого искусства</h3>
+                            <p class="section-text">Внезапно, реплицированные с зарубежных источников, современные
+                                исследования.</p>
+                            <a href="" class="event-card__link">Подробнее</a>
+                        </div>
+                        <div class="swiper-slide event-card MMAM">
+                            <h4 class="content-subtitle">ММАМ</h4>
+                            <h4 class="content-subtitle">с 8 апреля по 20 мая</h4>
+                            <h3 class="content-heading">Джон Винзор. Фотографии из серии «Метафора серебра»</h3>
+                            <p class="section-text">Один из ведущих флорентийских художников Кватроченто, основатель
+                                художественной династии, которую продолжили его брат Давид и сын Ридольфо.</p>
+                            <a href="" class="event-card__link">Подробнее</a>
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
                 <button class="button section-event__button">Все события</button>
             </div>
         </section>
-        <section class="section-edition">
+        <!--  <section class="section-edition">
             <div class="container">
                 <div class="section-content">
                     <div class="filter-menu">
